itc2611 uses chapters not module

--- a/franske-course-information/modules/itc-2611/pages/assignments.adoc
+++ b/franske-course-information/modules/itc-2611/pages/assignments.adoc
@@ -3,7 +3,7 @@
 == Lab & Homework Assignments
 
 === Lab Reports
-For each module having lab activities you will need to submit one xref:lab-reports:index.adoc[lab report] which covers all of the lab activities listed below in the module. Submissions are made through the NetAcad site. You do not need to submit answers to the questions in the activities, those are for your own learning use only. Lab activities may include remote equipment access, campus equipment, or packet tracer activities. Each lab report is worth up to 20 points.
+For each chapter having lab activities you will need to submit one xref:lab-reports:index.adoc[lab report] which covers all of the lab activities listed below in the chapter. Submissions are made through the NetAcad site. You do not need to submit answers to the questions in the activities, those are for your own learning use only. Lab activities may include remote equipment access, campus equipment, or packet tracer activities. Each lab report is worth up to 20 points.
 
 TIP: If you have not done lab reports in one of Dr. Franske's classes before, or you want to try and score better on lab reports, be sure to check out the xref:lab-reports:index.adoc[instructions for writing lab reports page and example reports]!
 
@@ -72,7 +72,7 @@ NOTE: You will be using the CCNP VM in Virtual Box on your Pod PC. Be sure the M
 
 ==== Homework
 
-* Participate in an online forum discussion (typically 3 quality posts or more) of each module on the Cisco Netacad site. See the xref:forum-posting:index.adoc[forum posting page] for details. (up to 10 points each module based on quality)
+* Participate in an online forum discussion (typically 3 quality posts or more) of each chapter on the Cisco Netacad site. See the xref:forum-posting:index.adoc[forum posting page] for details. (up to 10 points each chapter based on quality)
 
 TIP: Discussion forum posts are usually worth a larger portion of your final grade than most students expect! If you have not done discussion posts in one of Dr. Franske's classes before, or you want to try and score better on discussion forum postings, be sure to check out the xref:forum-posting:index.adoc[instructions for participating in forum discussions and example posts]!
 
@@ -84,7 +84,7 @@ Any participation activities completed in the course will go here. This falls in
 * Meet with the instructor once per week to discuss course progress and ask questions (up to 10 points each based on progress)
 
 === Unit Assessments
-You are responsible for completing all of the online unit assessments listed below. Multiple modules are included in single exams. These exams fall into the online assessments category of your course grade. 
+You are responsible for completing all of the online unit assessments listed below. Multiple chapters are included in single exams. These exams fall into the online assessments category of your course grade. 
 
 * Chapters 1 - 5: L2 Redundancy Exam
 * Chapters 6 - 7: Routing Essentials and EIGRP Exam
