--- a/franske-course-information/modules/itc-2611/pages/assignments.adoc
+++ b/franske-course-information/modules/itc-2611/pages/assignments.adoc
@@ -3,7 +3,7 @@
 == Lab & Homework Assignments
 
 === Lab Reports
-For each chapter having lab activities you will need to submit one xref:lab-reports:index.adoc[lab report] which covers all of the lab activities listed below in the chapter. Submissions are made through the NetAcad site. You do not need to submit answers to the questions in the activities, those are for your own learning use only. Lab activities may include remote equipment access, campus equipment, or packet tracer activities. Each lab report is worth up to 20 points.
+For each chapter having lab activities you will need to submit one xref:lab-reports:index.adoc[lab report] which covers all of the lab activities listed below in the chapter. Submissions are made through the NetAcad site. You do not need to submit answers to the questions in the activities, those are for your own learning use only. Lab activities may include remote equipment access or campus equipment. *Good lab reports in this class are typically 400-700 words long.* Each lab report is worth up to 20 points.
 
 TIP: If you have not done lab reports in one of Dr. Franske's classes before, or you want to try and score better on lab reports, be sure to check out the xref:lab-reports:index.adoc[instructions for writing lab reports page and example reports]!
 
