--- a/franske-course-information/modules/itc-2300/pages/lab-proxmox-installation.adoc
+++ b/franske-course-information/modules/itc-2300/pages/lab-proxmox-installation.adoc
@@ -42,8 +42,8 @@ NOTE: If you make a mistake and need to have one or both of your HV VMs erased s
 * Record the administrative password for future use, it is strongly suggested you use "itc2300" as the administrative password so that you can reference it here and your instructor can assist with issues in your lab.
 * Set the IP address for each Proxmox system using table above
 * Make sure the hostname is different on each Proxmox VE server and ends with .itc2300.campus.ihitc.net
-** It is recommended you set the name to "podXproxmoxA.itc2300.ihitc.net" (change as needed for your pod letter and HV VM ID letter)
-. Once installation is finished use a web browser on PC-C to access the Proxmox VE server's web interface as the root user (username root) and password set during the installation
+** It is recommended you set the name to "podXproxmoxA.itc2300.campus.ihitc.net" (change as needed for your pod letter and HV VM ID letter)
+. Once installation is finished use a web browser on PC-C to access the Proxmox VE server's web interface at the IP address of the hypervisor and login as the root user (username root) and password set during the installation
 +
 --
 NOTE: The password for the "Nelab User" account on PC-C is "netlab"
