itc 2300 clarify netlab access on schedule

--- a/franske-course-information/modules/itc-2300/pages/schedule.adoc
+++ b/franske-course-information/modules/itc-2300/pages/schedule.adoc
@@ -4,7 +4,7 @@
 [%autowidth,options="header"]
 |==========
 | Date    | Week     | Readings to do before the next date                                                                                                                                                                                  | Work to do before the next date                                                      | Assignments Due (Today by 6:00pm unless otherwise noted)                                                                                                                                                                                                   | Notes                                   
-| 24-Aug  | 1        | Introduction to Virtualization (complete whitepaper), Proxmox VE Fundamentals, Installing Proxmox VE                                                                                                                 | Review Syllabus/Schedule, Check Netlab Access                                        |                                                                                                                                                                                                                                                            |                                         
+| 24-Aug  | 1        | Introduction to Virtualization (complete whitepaper), Proxmox VE Fundamentals, Installing Proxmox VE                                                                                                                 | Review Syllabus/Schedule, Check Netlab Access and ensure you are enrolled in the class on Netlab                                        |                                                                                                                                                                                                                                                            |                                         
 | 31-Aug  | 2        | Proxmox VE Cluster and VM Management, Creating Containers                                                                                                                                                            | Proxmox Installation Lab                                                             | Proxmox Installation Discussion First Posts                                                                                                                                                                                                                | No instructor meeting required this week
 | 7-Sep   | 3        | vmWare vSphere Basics (complete whitepaper), vSphere 6.5 Installation and Setup Guide (Pages 82-85, 193-217)                                                                                                         | Proxmox VE Containes & Clusters Lab                                                  | Proxmox Installation Lab Report, Proxmox Installation Discussion All Posts, Proxmox VE Containers & Clusters Discussion First Posts                                                                                                                        |                                         
 | 14-Sep  | 4        | vSphere 6.5 Virtual Machine Administration (p. 8-23), VCSA 6.5 Installation Walkthrough, vSphere 6.5 Installation and Setup Guide (p. 10-18, 232-240), vCenter 6.5 Server and Host Management (p. 23-61)             | VMware ESXi Installation Lab                                                         | Proxmox VE Containers & Clusters Lab Report, Proxmox VE Containers & Clusters Discussion All Posts, VMware ESXi Installation Discussion First Posts, Proxmox Exam                                                                                          |                                         
