fix 2300 exam schedule

--- a/franske-course-information/modules/itc-2300/pages/schedule.adoc
+++ b/franske-course-information/modules/itc-2300/pages/schedule.adoc
@@ -9,8 +9,8 @@
 | 7-Sep   | 3        | vmWare vSphere Basics (complete whitepaper), vSphere 6.7 Installation and Setup Guide (Pages 73-76, 194-218), vSphere 6.7 Virtual Machine Administration (Pages 13-27, 100-191)                       | Proxmox VE Containes & Clusters Lab                                                  | Proxmox Installation Lab Report, Proxmox Installation Discussion All Posts, Proxmox VE Containers & Clusters Discussion First Posts                                                                                                                        |                                         
 | 14-Sep  | 4        | vCenter 6.7 Server Installation and Setup (p. 10-22, 40-65), vCenter 6.7 Server and Host Management (p. 25-76)             | VMware ESXi Installation Lab                                                         | Proxmox VE Containers & Clusters Lab Report, Proxmox VE Containers & Clusters Discussion All Posts, VMware ESXi Installation Discussion First Posts, Proxmox Exam                                                                                          |                                         
 | 21-Sep  | 5        | vSphere 6.7 Command Line Concepts and Examples (p. 10-30), vmWare KB1038043, vCenter 6.7 Server and Host Management (p. 144-160), vSphere 6.7 Virtual Machine Administration (Pages 27-61), vSphere 6.7 Platform Services Controller Administration (p. 26-42)  | VMware vCenter Installation Lab                                                      | VMware ESXi Install Lab Report, VMware ESXi Installation Discussion All Posts, VMware vCenter Installation First Posts, VMware ESXi Exam                                                                                                                   |                                         
-| 28-Sep  | 6        | Read/Watch: Introduction to VoIP with Asterisk Materials (see below)                                                                                                                                                 | VMware vSphere Administration Lab                                                    | VMware vCenter Install Lab Report, VMware vCenter Installation Discussion All Posts, VMware vSphere Administration Discussion First Posts, VMware vCenter Exam                                                                                             |                                         
-| 5-Oct   | 7        | Read: VoIP: Provisioning, Voicemail, and SIP (see below)                                                                                                                                                             | Introduction to VoIP Labs (see Assignments page)                                     | VMware vSphere Administration Lab Report, VMware vSphere Administration Discussion All Posts, Introduction to VoIP First Posts, VMware vSphere Administration Exam                                                                                         |                                         
+| 28-Sep  | 6        | Read/Watch: Introduction to VoIP with Asterisk Materials (see below)                                                                                                                                                 | VMware vSphere Administration Lab                                                    | VMware vCenter Install Lab Report, VMware vCenter Installation Discussion All Posts, VMware vSphere Administration Discussion First Posts                                                                                            |                                         
+| 5-Oct   | 7        | Read: VoIP: Provisioning, Voicemail, and SIP (see below)                                                                                                                                                             | Introduction to VoIP Labs (see Assignments page)                                     | VMware vSphere Administration Lab Report, VMware vSphere Administration Discussion All Posts, Introduction to VoIP First Posts, VMware vCenter and Administration Exam                                                                                         |                                         
 | 12-Oct  | 8        | Read: T1 and PSTN Access Materials (see below)                                                                                                                                                                       | Provisioning, Voicemail, and SIP Labs (see Assignments page)                         | Introduction to VoIP Lab, Introduction to VoIP All Posts, VoIP: Provisioning, Voicemail, and SIP First Posts, Introduction to VoIP Exam                                                                                                                    |                                         
 | 19-Oct  | 9        | Read: GUI Asterisk Configuration Materials (see below)                                                                                                                                                               | T1 and PSTN Access Labs (see Assignments page)                                       | VoIP: Provisioning, Voicemail, and SIP Lab Report, VoIP: Provisioning, Voicemail, and SIP Discussion All Posts, T1 and PSTN Access Discussion First Posts, VoIP: Provisioning, Voicemail, and SIP Lab Exam                                                 |                                         
 | 26-Oct  | 10       | Getting Started with DevNet Readings (see below for links)                                                                                                                                                           | GUI Asterisk Configuration Labs (see Assignments page)                               | T1 and PSTN Access Lab Report, T1 and PSTN Access Discussion All Posts, GUI Asterisk Configuration Discussion First Posts, T1 and PSTN Access Exam                                                                                                         |                                         
