--- a/franske-course-information/modules/itc-2300/pages/schedule.adoc
+++ b/franske-course-information/modules/itc-2300/pages/schedule.adoc
@@ -23,4 +23,63 @@
 | 14-Dec  | FE Week |     |       | Case Study Presentations, Case Study Lab Reports, Online Final Exam | Instructor meeting not required this week
 |==========
 
+== Readings
+
+=== Introduction to VoIP with Asterisk
+* https://youtu.be/6hqZfAy_0UM[VIDEO: Asterisk from Scratch - Part 1 - Intro to Asterisk & Asterisk Architecture]
+* https://youtu.be/qFO_XvyvbNg[VIDEO: Asterisk from Scratch - Part 2 - Installing Asterisk & Intro to Dial Plan]
+* https://youtu.be/JT64gVNT1TY[VIDEO: Asterisk from Scratch - Part 4 - Introduction to Dial Plan (First 12:30 ONLY)]
+* http://www.asteriskdocs.org/en/3rd_Edition/asterisk-book-html-chunk/DeviceConfig_id216341.html[Configuring Asterisk for User Devices]
+* https://www.engineerkhan.com/collab/cisco-phone-bootup-process/[Cisco IP Phone Boot Process]
+* https://github.com/chan-sccp/chan-sccp/wiki/What-is-chan-sccp-b[What is Chan-SCCP]
+* https://github.com/chan-sccp/chan-sccp/wiki/setup-sccp.conf[Chan-SCCP sccp.conf Configuration File Documentation]
+* https://github.com/chan-sccp/chan-sccp/wiki/Dialplan[SCCP Dialplan Configuration]
+* http://www.asteriskdocs.org/en/3rd_Edition/asterisk-book-html-chunk/asterisk-DP-Basics-SECT-1.html[Dialplan Syntax]
+* http://www.asteriskdocs.org/en/3rd_Edition/asterisk-book-html-chunk/asterisk-DP-Basics-SECT-2.html[A Simple Dialplan]
+* http://www.asteriskdocs.org/en/3rd_Edition/asterisk-book-html-chunk/asterisk-DP-Basics-SECT-3.html[Building an Interactive Dialplan]
+
+=== VoIP: Provisioning, Voicemail, and SIP
+* https://youtu.be/JT64gVNT1TY[VIDEO: Asterisk from Scratch - Part 4 - Introduction to Dial Plan (Continuing from 12:30 through end)]
+* https://wiki.asterisk.org/wiki/display/DIGIUM/A-Series+Provisioning[Digium A-Series Phone Provisioning]
+* https://support.digium.com/s/article/A-Phone-Config-Web?ui-force-components-controllers-recordGlobalValueProvider.RecordGvp.getRecord=1&r=6[Digium A-Series Phone Web Interface]
+* https://wiki.asterisk.org/wiki/display/AST/PJSIP+Configuration+Sections+and+Relationships[PJSIP Config Sections and Relationships]
+* https://wiki.asterisk.org/wiki/display/DIGIUM/Provisioning[Digium D-Series Phone Provisioning]
+* https://wiki.asterisk.org/wiki/display/DIGIUM/Digium+Phone+Module+for+Asterisk+%28DPMA%29+v+3.5.0[Introduction to DPMA]
+* https://wiki.asterisk.org/wiki/display/DIGIUM/DPMA+Installation[DPMA Installation Instructions]
+* https://wiki.asterisk.org/wiki/display/DIGIUM/DPMA+Configuration[DPMA Configuration]
+* https://wiki.asterisk.org/wiki/display/DIGIUM/Digium+Phones+when+used+with+DPMA[SIP Configuration for DPMA Phones]
+* http://www.asteriskdocs.org/en/3rd_Edition/asterisk-book-html-chunk/Voicemail_id263499.html[Asterisk Voicemail]
+* http://www.asteriskdocs.org/en/3rd_Edition/asterisk-book-html-chunk/Voicemail_id292544.html[Asterisk Dialplan Voicemail Integration]
+
+=== VoIP: T1 and PSTN Access
+* http://www.asteriskdocs.org/en/3rd_Edition/asterisk-book-html-chunk/asterisk-OutsideConn-SECT-1.html[The Basics of Trunking]
+* https://www.voip-info.org/did/[DIDs and Trunking]
+* http://t1rex.blogspot.com/2011/11/cas-vs-pri-voice-channels.html[CAS vs PRI Trunking]
+* https://www.atlantech.net/blog/pri-vs.-sip-trunking-whats-the-difference-and-which-is-best[PRI vs SIP Trunking]
+* http://www.asteriskdocs.org/en/3rd_Edition/asterisk-book-html-chunk/OutsideConnectivity_id242479.html[Fundamental Dialplan for Outside Connectivity]
+* http://www.asteriskdocs.org/en/3rd_Edition/asterisk-book-html-chunk/OutsideConnectivity_id291235.html[Outside VoIP Connectivity]
++
+--
+NOTE: This is an older reference and the SIP configuration shown uses sip.conf which is slightly different than the pjsip.conf we are using, just be aware that the concepts are sound but the exact SIP configuration will be a bit different
+--
+* https://wiki.asterisk.org/wiki/display/AST/res_pjsip+Configuration+Examples#res_pjsipConfigurationExamples-ASIPtrunktoyourserviceprovider,includingoutboundregistration[PJSIP Configuration for Trunk to Service Provider Including Registration]
+* http://www.asteriskdocs.org/en/3rd_Edition/asterisk-book-html-chunk/OutsideConnectivity_id291313.html[Emergency Dialing]
+* https://wiki.asterisk.org/wiki/display/AST/Dialplan+Security[Asterisk Dialplan Security]
+* https://www.cisco.com/c/en/us/td/docs/ios-xml/ios/voice/dialpeer/configuration/15-mt/vd-15-mt-book/vd-dp-overview.html[Cisco IOS Dial Peer Configuration Guide: Dial Peer Overview]
+* https://www.cisco.com/c/en/us/td/docs/ios-xml/ios/voice/dialpeer/configuration/15-mt/vd-15-mt-book/vd-dp-feat-cfg.html[Cisco IOS Dial Peer Configuration Guide: Dial Peer Features and Configuration]
+* https://www.cisco.com/c/en/us/td/docs/ios-xml/ios/voice/voiceport/configuration/15-mt/vp-15-mt-book/vp-overview.html[Cisco IOS Voice Port Configuration Guide: Voice Port Configuration Overview]
+* https://www.cisco.com/c/en/us/td/docs/voice_ip_comm/cucme/srnd/design/guide/cmesrnd/gatewy.html[Cisco Unified CallManager Express Solution Reference Network Design Guide: Voice Gateways]
+
+=== VoIP: GUI Asterisk Configuration
+* https://wiki.freepbx.org/display/PPS/Installing+SNG7+Official+Distro[FreePBX Installation Guide]
+* https://wiki.freepbx.org/display/FPG/FreePBX+Distro[FreePBX Registration]
+* https://wiki.freepbx.org/display/FPG/Configuring+Your+PBX[FreePBX: Configuring Your PBX] - Skip the section on "Setting Up SIPStation Trunks"
+* https://wiki.freepbx.org/display/FPG/Extensions+Module+-+PJSIP+Extension[FreePBX PJSIP Extensions]
+* https://wiki.freepbx.org/display/FPG/Trunks+Module+-+User+Guide[FreePBX Trunks]
+* https://github.com/chan-sccp/chan-sccp/wiki/FreePBX_Installation[Chan-SCCP FreePBX Installation]
+* https://github.com/chan-sccp/chan-sccp/wiki/FreePBX_Dialplan[Chan-SCCP FreePBX Dialplan]
+* https://github.com/PhantomVl/sccp_manager/blob/extension_mobility/README.md[Chan-SCCP FreePBX Manager Readme]
+* https://wiki.freepbx.org/display/PPS/FreePBX+Distro+First+Steps+After+Installation[FreePBX First Steps]
+* https://github.com/chan-sccp/chan-sccp/wiki/FreePBX_Setup[Chan-SCCP FreePBX Setup]
+
 include::program-info:ROOT:partial$stdfooter.adoc[]
